New pages have been added, google maps have been integrated

--- a/static_html/routes.html
+++ b/static_html/routes.html
@@ -32,28 +32,27 @@
 	<th>To</th>
   </tr>
   <tr>
-    <td>12357</td>
+    <td><a href="route_card.html">66</a></td>
     <td>Saint-Petersburg</td>
     <td>New York</td>
   </tr>
   <tr>
-    <td>12357</td>
+    <td><a href="route_card.html">66</a></td>
     <td>Saint-Petersburg</td>
     <td>New York</td>
-  </tr><tr>
-    <td>12357</td>
+  </tr>
+  <tr>
+    <td><a href="route_card.html">66</a></td>
     <td>Saint-Petersburg</td>
     <td>New York</td>
-  </tr><tr>
-    <td>12357</td>
+  </tr>
+  <tr>
+    <td><a href="route_card.html">66</a></td>
     <td>Saint-Petersburg</td>
     <td>New York</td>
-  </tr><tr>
-    <td>12357</td>
-    <td>Saint-Petersburg</td>
-    <td>New York</td>
-  </tr><tr>
-    <td>12357</td>
+  </tr>
+  <tr>
+    <td><a href="route_card.html">66</a></td>
     <td>Saint-Petersburg</td>
     <td>New York</td>
   </tr>
