--- a/static_html/transport_card.html
+++ b/static_html/transport_card.html
@@ -24,28 +24,38 @@
     <main>
 	<section class="content clearfix">
 		<div class="login"><a href="">Sign in</a></div>
-		<h2>Transport</h2>
-		<form>
-		  <p>Sort by: </p>
-		  <select id="sorting" name="places">
-			<option value="number">Number</option>
-			<option value="places">Number of places</option>
-		  </select>
-		</form>
+		<h2>Ship №100</h2>
+		<p class="centered-text">This ship has been constructed by a Admiralty Shipyard in 1995. The characteristics are: length 366 m, beem 49 m, draft 15.2 m. The capacity is 14500 TEU. The ship follows the <a href="route_card.html">route 66.</a></p>
 		<table class="entity_table">
-		  <tr>
-			<th>Number</th>
-			<th>Type</th>
-			<th>Route</th>
-			<th>Number of places</th>
-		  </tr>
-		  <tr>
-			<td><a href="transport_card.html">100</a></td>
-			<td>Ship</td>
-			<td><a href="route_card.html">66</a></td>
-			<td>1000</td>
-		  </tr>
-		</table>
+  <tr>
+    <th>Stop number</th>
+    <th>Place</th>
+	<th>Arrival</th>
+    <th>Duration</th>
+	<th>Departure</th>
+  </tr>
+  <tr>
+    <td><a href="stop_card.html">1</a></td>
+    <td>Saint-Petersburg</td>
+    <td>12:00</td>
+    <td>26 hours</td>
+    <td>14:00</td>
+  </tr>
+  <tr>
+    <td><a href="stop_card.html">2</a></td>
+    <td>Kopenhagen</td>
+    <td>12:00</td>
+    <td>15 hours</td>
+    <td>01:00</td>
+  </tr>
+  <tr>
+    <td><a href="stop_card.html">3</a></td>
+    <td>New York</td>
+    <td>17:00</td>
+    <td>26 hours</td>
+    <td>19:00</td>
+  </tr>
+</table>
 	</section>
 	</main>
     <footer>
