--- a/static_html/index.html
+++ b/static_html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 	<title>T-Shipping</title>
-	  </head>
+  </head>
   <body>
     <header>
       <a href="index.html"><div class="name"><h1>T-Shipping</h1></div></a>
@@ -27,7 +27,7 @@
 		<h2>We are the most awesome shipping company in the world!</h2>
 		<p class="simple-text toleft">We deliver everything you want wherever you want!
 		</p>
-		<img src="images/1.jpg" id="map">
+		<img src="images/1.jpg" id="map_pic">
 		<p class="simple-text toleft">The easiest way to organise shipping!</p>
 		<a href="find.html"><p class="super-but proj-but">find a route</p></a>
 	</section>
