--- a/static_html/stop_card.html
+++ b/static_html/stop_card.html
@@ -24,28 +24,51 @@
     <main>
 	<section class="content clearfix">
 		<div class="login"><a href="">Sign in</a></div>
-		<h2>Transport</h2>
-		<form>
-		  <p>Sort by: </p>
-		  <select id="sorting" name="places">
-			<option value="number">Number</option>
-			<option value="places">Number of places</option>
-		  </select>
-		</form>
+		<h2>Stop 1</h2>
+		<p class="centered-text"> This stop is situated in the sea port of Saint Petersburg, Russia. </p>
 		<table class="entity_table">
 		  <tr>
-			<th>Number</th>
-			<th>Type</th>
 			<th>Route</th>
-			<th>Number of places</th>
+			<th>Transport number</th>
+			<th>Transport type</th>
+			<th>Arrival</th>
+			<th>Departure</th>
 		  </tr>
 		  <tr>
+			<td><a href="route_card.html">66</a></td>
 			<td><a href="transport_card.html">100</a></td>
 			<td>Ship</td>
-			<td><a href="route_card.html">66</a></td>
-			<td>1000</td>
+			<td> - </td>
+			<td>14:00</td>
 		  </tr>
-		</table>
+		  <tr>
+			<td><a href="route_card.html">66</a></td>
+			<td><a href="transport_card.html">100</a></td>
+			<td>Ship</td>
+			<td> - </td>
+			<td>14:00</td>
+		  </tr>
+		</table>	
+
+		<!-- Google Maps -->
+		<div id="map"></div>
+			<script>
+		// Initialize and add the map
+		function initMap() {
+		  // The location of SPb 59.926789, 30.233772
+		  var spb = {lat: 59.926789, lng: 30.233772};
+		  // The map, centered at spb
+		  var map = new google.maps.Map(
+			  document.getElementById('map'), {zoom: 10, center: spb});
+		  // The marker, positioned at Uluru
+		  var marker = new google.maps.Marker({position: spb, map: map});
+		}
+		</script>
+		<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZFGV9mhO59Iuq-gVjzw5CSdXQm4Ibuvc&callback=initMap">
+		</script>
+		<!-- /Google Maps -->
+	
 	</section>
 	</main>
     <footer>
